--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <a href="pages/Generos/generos.html" class="bar">Generos</a>
     <a href="pages/Artistas/artistas.html   " class="bar">Artistas y banda</a>
     <a href="pages/paleta.html   " class="bar">Paleta de colores</a>
-    <a href="pages/Crecitors.html   " class="bar">Creditos</a>
+    <a href="pages/credit.html   " class="bar">Creditos</a>
 
 
 </header>
